Fix the gap on mobile with external link icons
This only appears when a user doesn't have any external links

[Finishes: #134467597](https://www.pivotaltracker.com/story/show/134467597)

--- a/src/components/users/UserParts.css
+++ b/src/components/users/UserParts.css
@@ -382,6 +382,7 @@ User Links */
 }
 
 .UserLinksCell[data-num-links="0"] .UserExternalLinksRight {
+  position: static;
   left: 0;
 }
 
